Added new sounds.

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -38,6 +38,8 @@
         <div><a href="http://www.freesound.org/people/Audionautics/sounds/136977/">People</a> sound by <a href="http://freesound.org/people/Audionautics">Audionautics</a> from <a href="https://www.freesound.org/" title="Freesound">Freesound</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/legalcode">CC 3.0 BY</a>
         <div>Generator sound by <a href="https://www.freesound.org/people/qubodup/" title="Iwan Gabovitch">Iwan Gabovitch</a> from <a href="https://www.freesound.org/" title="Freesound">Freesound</a> is licensed by <a href="http://creativecommons.org/publicdomain/zero/1.0/" title="Creatice Commons CC0 1.0">CC0 1.0 (Public Domain)</a></div>
         <div>Gunshot sound by <a href="https://www.freesound.org/people/LG/" title="qubodup">LG</a> from <a href="https://www.freesound.org/" title="Freesound">Freesound</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+        <div>Helicopter sound by Diode111 from <a href="http://www.flashkit.com" title="Flashkit">Flash Kit</a> is licensed by Freeware</div>
+        <div>Wind sound from <a href="http://www.freesoundeffects.com" title="Free Sound Effects">Free Sound  Effects</a> is unlicensed freeware.</div>
         <hr>
         <div>Wave icon made by <a href="http://www.flaticon.com/authors/ocha" title="OCHA">OCHA</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
         <div>Cricket icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
@@ -51,6 +53,8 @@
         <div>Gun icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
         <div>Radio icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
         <div>Plus icon made by <a href="http://www.flaticon.com/authors/madebyoliver" title="Madebyoliver">Madebyoliver</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+        <div>Helicopter icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+        <div>Wind icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
       </div>
     </div>
   </body>
